{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 367,
  "lineage": "eff9994a-1721-8074-a702-a4fc240881ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sal_ec2_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a63f96e85105c6d3",
            "arn": "arn:aws:ec2:us-east-2:851679981849:instance/i-0a399efdffd4865c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a399efdffd4865c3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default_pair_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc0755bbb5900ae2",
            "private_dns": "ip-172-20-2-232.us-east-2.compute.internal",
            "private_ip": "172.20.2.232",
            "public_dns": "ec2-18-223-206-81.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.206.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cb3b1540e1bef3f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b00016d4f9ac1877",
            "tags": {
              "Name": "sal_ec2_instance0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8d79d439bc33184"
            ]
          },
          "dependencies": [
            "aws_key_pair.sal_pair_key",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:internet-gateway/igw-0a0d5f1145f484e09",
            "id": "igw-0a0d5f1145f484e09",
            "owner_id": "851679981849",
            "tags": {
              "Name": "sal-pilot-sal"
            },
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a0d5f1145f484e09",
            "id": "r-rtb-09a669239eec5852e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a669239eec5852e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:security-group/sg-05e9f307219c06057",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e9f307219c06057",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3fa2b83218c9693"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sal-pilot-sal-db",
            "name_prefix": null,
            "owner_id": "851679981849",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_security_group.db_tasks",
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:security-group/sg-0d3fa2b83218c9693",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3fa2b83218c9693",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f8d79d439bc33184"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "syntheia-pilot-sal-ecs",
            "name_prefix": null,
            "owner_id": "851679981849",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:security-group/sg-0f8d79d439bc33184",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8d79d439bc33184",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sal-pilot-sal-lb",
            "name_prefix": null,
            "owner_id": "851679981849",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:subnet/subnet-03f130e704a85a7e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.0.0/24",
            "id": "subnet-03f130e704a85a7e5",
            "map_public_ip_on_launch": false,
            "owner_id": "851679981849",
            "tags": {
              "Name": "sal-pilot-sal-private-0"
            },
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:subnet/subnet-0b00016d4f9ac1877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.2.0/24",
            "id": "subnet-0b00016d4f9ac1877",
            "map_public_ip_on_launch": true,
            "owner_id": "851679981849",
            "tags": {
              "Name": "sal-pilot-sal-public-0"
            },
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:subnet/subnet-04b58599bcf466134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.3.0/24",
            "id": "subnet-04b58599bcf466134",
            "map_public_ip_on_launch": true,
            "owner_id": "851679981849",
            "tags": {
              "Name": "sal-pilot-sal-public-1"
            },
            "vpc_id": "vpc-03a0f021902184fc2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851679981849:vpc/vpc-03a0f021902184fc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0c9cbbf53b39740b8",
            "default_route_table_id": "rtb-09a669239eec5852e",
            "default_security_group_id": "sg-01d3513f7f1f59e38",
            "dhcp_options_id": "dopt-b6a07add",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03a0f021902184fc2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a669239eec5852e",
            "owner_id": "851679981849",
            "tags": {
              "Name": "sal-pilot-sal"
            }
          }
        }
      ]
    }
  ]
}